--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,11 @@
     <title>TD-GAME</title>
 </head>
 <body>
-<script type="text/javascript" src="Vector2.js"></script>
-<script type="text/javascript" src="Main.js"></script>
 <canvas id="TD_Canvas" width="400" height="400"></canvas>
+<script type="text/javascript" src="do.js"></script>
+<script type="text/javascript" src="do-config.js"></script>
+<script>
+Do('Main');
+</script>
 </body>
 </html>
