--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <title>TD-GAME</title>
 </head>
 <body>
-<canvas id="TD_Canvas" width="400" height="400"></canvas>
+<canvas id="TD_Canvas" width="400" height="400" style="border:1px solid #ccc"></canvas>
 <script type="text/javascript" src="do.js"></script>
 <script type="text/javascript" src="do-config.js"></script>
 <script>
